# CSE306-raytracer

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  mesh_reader.hpp
lab_5/: main.cpp
raytracer/: bvh.hpp  geometry.h  mesh.hpp  ray.h  rng.hpp  scene.h  sphere.cpp  sphere.h  texture.hpp  triangle.hpp  triangles.h  vector.cpp  vector.h
